--- a/ElectronicVotingServer/ElectronicVotingServer.csproj
+++ b/ElectronicVotingServer/ElectronicVotingServer.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="BigInteger.NetCore" Version="1.0.0" />
+      <PackageReference Include="fastJSON" Version="2.3.5.3" />
     </ItemGroup>
 
 </Project>
